added advanced search and language selector in mobile, also make some code fixings

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@
     clear: right;
 }
 
+.header-language-switcher-mobile {
+    text-align: center;
+}
+
 .user_loged .header-language-switcher {
     margin-left: 15px;
 }
